[tool.poetry]
name = "pve-cslb"
version = "1.1.0"
description = "A workload balancing engine for ProxmoxPVE.  Identifies nodes with imbalanced loads and migrates workloads around to even things out."
authors = ["padthaitofuhot <padthaitofuhot@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "SimpleCSLB" },
    { include = "pve-cslb.py" },
]

[tool.poetry.scripts]
pve-cslb = 'pve-cslb.py'

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
proxmoxer = "^2.0.1"
pyyaml = "^6.0.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
