[tool.poetry]
name = "pve-cslb"
version = "1.3.0"
description = "A workload balancing engine for ProxmoxPVE.  Identifies nodes with imbalanced loads and migrates workloads around to even things out."
authors = ["padthaitofuhot <padthaitofuhot@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "SimpleCSLB" },
]

[tool.poetry.scripts]
pve-cslb = 'SimpleCSLB.Runner:main'

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
proxmoxer = "^2.0.1"
requests = "^2.32.3"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
profile = 'black'