[project]
name = "pve-cslb"
version = "1.4.0"
description = "A workload balancing engine for ProxmoxPVE.  Identifies nodes with imbalanced loads and migrates workloads around to even things out."
authors = [
    { name = "Travis Wichert", email = "travis@padthaitofuhot.com" }
]
dependencies = [
    "loguru>=0.7.3",
    "proxmoxer>=2.2.0",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "paramiko>=3.5.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
pve-cslb = 'pve_cslb.runner:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "notebook>=7.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pve_cslb"]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.ipynb"
]
extend-exclude = ["*.ipynb"]
